# Paxospp

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  paxos.cc  paxos.h  paxos.proto  paxos_client.cc  server-main.cc
.github/workflows/: main.yml
docs/: annotated.html  classes.html  classkvstore_1_1_k_v_store_client.html  classkvstore_1_1_k_v_store_server.html  classpaxos_1_1_paxos.html  design.md  dir_022b98089b5c4de66fac0f857f491a9f.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_4e89733f7415c5123265e954384e187c.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_cfafba98a580ce4b62f8a6fa96d7cbb0.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  hierarchy.html  jiawei.md  kvstore-client_8cc.html  kvstore-client_8h.html  kvstore-client_8h_source.html  kvstore-server_8cc.html  kvstore-server_8h.html  kvstore-server_8h_source.html  md_documentations_design.html  md_documentations_tutorial.html  pages.html  paxos_8cc.html  paxos_8h.html  paxos_8h_source.html  structkvstore_1_1_op.html  structkvstore_1_1_response.html  structpaxos_1_1_acceptor.html  structpaxos_1_1_instance.html  structpaxos_1_1_proposer.html  test_8cc.html  tutorial.md  user-manual.md
docs/html/: index.html
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  pages_0.js  pages_1.js  pages_2.js  searchdata.js  variables_0.js  (+5 more)
documentations/: design.md  tutorial.md
example/: CMakeLists.txt  server.cc
example/kv-store/: CMakeLists.txt
example/kvstore/: CMakeLists.txt  kvclient.cc  kvclient.h  kvstore-client.cc  kvstore-client.h  kvstore-server.cc  kvstore-server.h  kvstore.cc  kvstore.h
example/simple-server/: CMakeLists.txt  server.cc
golang/: paxos.go.txt
html/: index.html
include/: paxos.h
lib/: paxos.cc
protos/: kvstore.proto  paxos.proto
src/: paxos.cc
test/: CMakeLists.txt  test.cc
